<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.toshiba.iiitdmjparking.MainActivity"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/collegelogo"
        android:src="@drawable/pdpm" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:text="@string/parking_slots_list_of_available_to_total"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="34dp"
        android:layout_marginStart="23dp"
        android:text="@string/lhtc_1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginBottom="42dp"
        android:text="@string/lhtc_2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="37dp"
        android:text="@string/hall_1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="41dp"
        android:text="@string/nr"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text=""
        android:textSize="32sp"
        android:textAlignment="textEnd"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginEnd="23dp"
        android:ems="5" />

    <TextView
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText2"
        android:textAlignment="textEnd"
        android:text=""
        android:textSize="32sp"
        android:layout_alignTop="@+id/textView3"
        android:ems="5" />

    <TextView
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText3"
        android:text=""
        android:textSize="32sp"
        android:textAlignment="textEnd"
        android:layout_alignTop="@+id/textView4"
        android:ems="5" />

    <TextView
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText4"
        android:textAlignment="textEnd"
        android:layout_alignTop="@+id/textView5"
        android:text=""
        android:textSize="32sp"
        android:ems="5" />

</RelativeLayout>
</ScrollView>